# code-symbol-index

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  README.zh.md  code_symbol_index.py  pyproject.toml
tests/: test_code_symbol_index.py  test_import.py
